[package]
name = "led-strip"
version = "0.1.0"
edition = "2024"

[dependencies.arduino-hal]
git = "https://github.com/rahix/avr-hal"
rev = "0f7fa4d01755f1985d95ed2015d5464a29154b05"
features = ["trinket-pro"]

# Configure the build for minimal size - AVRs have very little program memory
[profile.dev]
panic = "abort"
lto = true
opt-level = "s"

[profile.release]
panic = "abort"
codegen-units = 1
debug = true
lto = true
opt-level = "s"

[features]
default = ["asm_experimental_arch"]
testing = []
asm_experimental_arch = []
